--- a/src/components/phonehome.css
+++ b/src/components/phonehome.css
@@ -1,8 +1,355 @@
-/*@media screen and (min-width: 768px){
+/*@media screen and (min-width: 201px) and (max-width: 391px){
+	.home{
+		background: #FEFBF7;
+	}
+	.we-do{
+		text-align: center;
+	}
+	.we-do h1{
+		font-size: 22px;
+		font-weight: bold;
+		text-align: center;
+	  	margin: 0px 18px;
+	  	color: #262A4F;
+	  	font-family: 'roboto';
+	}
+	.we-do h4{
+		font-family: poppins;
+		color: #6F6F6F;
+		font-size: 12px;
+		margin-bottom: 8px;
+	}
+	#findTechnicianButton{
+		display: flex;
+		height: 30px;
+		width: 127px;
+		background: #EC8206;
+		align-items: center;
+		border-radius: 20px;
+		color: white;
+		align-items: center;
+		justify-content: center;
+		margin: auto;
+		box-shadow: 1px 5px 15px rgba(236, 130, 6, 0.5);
+		
+	}
+	#findTechnicianButton button{
+		font-family: poppins;
+		font-size: 12px;
+		color: #F0F2FF;
+	}
+	#phone-samples {
+		min-height: 145px;
+		background: #262A4F;
+		margin-top: 30px;
+		align-items: center;
+		justify-content: center;
+		display: flex;
 
-}
-@media screen and (min-width: 992px){
+	}
+	.phone_sample img{
+		max-height: 150px;
+		margin: 20px 0px;
+		border: 2px solid black;
+		border-radius: 10px;
+	}
+	.phone_sample1 img{
+		max-height: 150px;
+		margin: 20px 80px;
+		border: 3px solid black;
+		border-radius: 10px;
+	}
+	.phone_sample2 img{
+		max-height: 150px;
+		margin: 20px 0px;
+		border: 2px solid black;
+		border-radius: 10px;
+	}
 
+	#find_your {
+		display: block;
+		position: static;
+		min-height: 116px;
+		width: 100%;
+		background: #262A4F;
+		margin-left: 0%;
+		z-index: 1;
+		text-align: center;
+		align-items: center;
+		justify-content: center;
+		color: white;
+	}
+	#find_your_nearby_technician{
+		display: inline-block;
+		font-size: 20px;
+		font-weight: bold;
+		margin-left: 0%;
+		min-width: 80%;
+		text-align: center;
+		margin-top: 30px;
+		font-size: 20px;
+
+	}
+	#find_a_technician{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: auto;
+		background: #EC8206;
+		height: 30px;
+		width: 192px;
+		border-radius: 25px;
+		margin-top: 5px;
+		margin-left: auto;
+		margin-bottom: 30px;
+	}
+	#box1 {
+		display: block;
+		max-width: 100%;
+		margin-top: 20px;
+		border-radius: 0px;
+		text-align: center;
+	}
+	#box1 img{
+		margin: auto;
+		height: 308px;
+		width: 314px;
+	}
+	#box2 {
+		min-height: 400px;
+		display: inline-block;
+		margin-left: 24px;
+		margin-right: 24px;
+		vertical-align: top;
+		margin-top: 30px;
+
+	}
+	#why_us {
+		position: static;
+		min-height: 800px;
+		width: 100%;
+	}
+	#why_for_large_screen{
+		margin:170px 0px 0px 40%;
+		font-size: 50px;
+		display: none;
+	}
+	#why_for_small_screen{
+		display: block;
+		font-size: 24px;
+		color: #262A4F;
+		text-align: center;
+		font-weight: bold;
+		margin-top: 20px;
+	}
+	#why_for_small_screen1{
+		display: block;
+		text-align: center;
+		font-size: 12px;
+		font-family: poppins;
+		color: #6F6F6F;
+	}
+	#inner_box2{
+		display: flex;
+		align-items: center;
+		margin-left: 0%;
+		margin-top: 60px;
+	}
+	.testimonials {
+		text-align: center;
+	}
+	#testimonials {
+		display: flex;
+		text-align: center;
+		margin: 0px 34px 0px 34px;
+	}
+	.section {
+		min-height: 800px;
+
+	}
+	.phone_sample img{
+	max-height: 105px;
+	margin: 20px 0px;
+	}
+	.phone_sample1 img{
+		max-height: 150px;
+		margin: 10px 10px;
+		max-width: 150px;
+	}
+	.phone_sample2 img{
+		max-height: 105px;
+		margin: 20px 0px;
+	}
+	.arrow1{
+		font-size:25px;
+		color: #262A4F;
+		width: 30px;
+	}
+	#booking {
+		text-align: center;
+		font-size: 20px;
+		font-weight: bold;
+		font-family: roboto;
+		font-weight: bold;
+	}
+	#service_picture1{
+		display: none;
+	}
+	#service_picture{
+		text-align: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 8px;
+		font-family: poppins;
+		color: #6F6F6F;
+		margin-bottom: 20px;
+	}
+	.testimonials h1{
+		margin-top: 30px;
+		margin-bottom: 20px;
+		font-size: 32px;
+		font-weight: bold;
+  		color: #262A4F;
+  		text-shadow: 1px 5px 4px rgba(38, 42, 79, 0.25);
+	}
+
+	.testimonial_picture2_1{
+		display: inline-block;
+		min-width: 100px;
+		max-width: 450px;
+		vertical-align: middle;
+		text-align: left;
+		margin:0px  0px 0px 5px;
+		font-family: poppins;
+		font-weight: 400px;
+		color: #6F6F6F;
+		line-height: 18px;
+		font-size: 12px;
+	}
+	.testimonial_picture2_2{
+		display: inline-block;
+		min-width: 100px;
+		max-width: 450px;
+		vertical-align: middle;
+		text-align: left;
+		margin:0px  0px 0px 5px;
+		font-family: poppins;
+		font-weight: 400px;
+		color: #6F6F6F;
+		line-height: 18px;
+		font-size: 12px;
+	}
+
+	.testimonial_picture img{
+		height: 82px;
+		width: 95px;
+	}
+	.word_color1{
+		color: #EC8206;
+	}
+	#text_content{
+		display: inline-block;
+		width: 272px;
+		margin-left: 5px;
+		font-size: 10px;
+		font-family: poppins;
+		color: #6F6F6F;
+	}
+	#text_content h2{
+		font-weight: bold;
+		font-size: 20px;
+		color: #3D3D3D;
+	}
+	#inner_box1{
+		display: flex;
+		align-items: flex-start;
+		justify-content: center;
+		margin: 0px 0px 24px 0px;
+	}
+	#inner_box3{
+		display: flex;
+		align-items: flex-start;
+		justify-content: center;
+		margin: 0px 0px 24px 0px;
+		padding-left: 0px;
+	}
+	#inner_box2{
+		display: flex;
+		align-items: flex-start;
+		justify-content: center;
+		margin: 0px 0px 24px 0px;
+	}
+	#circle {
+		min-height: 60px;
+		min-width: 60px;
+		display: inline-block;
+		background: #EC8206;
+		border-radius: 50%;
+		margin-top: 0px;
+	}
+	#flex_circle{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		min-height: 60px;
+		min-width: 60px;
+		border-radius: 50%;
+		background: #EC8206;
+	}
+	#flex_circle img{
+		height: 25px;
+	}
+	#arrow_box{
+		display: flex;
+		justify-content: space-between;
+		margin: 6px 34px;
+	}
+
+	#arrow_left {
+	  background: #262A4F;
+		display: flex;
+		width: 25px;
+		height: 25px;
+		border-radius: 50%;
+		align-items: center;
+		justify-content: center;
+	}
+	#arrow_right {
+	  background: #262A4F;
+		display: flex;
+		margin-left: 50%;
+		width: 25px;
+		height: 25px;
+		border-radius: 50%;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.arrow {
+	  border: solid white;
+	  border-width: 0 1px 1px 0;
+	  display: inline-block;
+	  min-height: 6px;
+	  min-width: 6px;
+	  margin-left: 3px;
+	}
+	.arrow2 {
+	  border: solid white;
+	  border-width: 0 1px 1px 0;
+	  display: inline-block;
+	  min-height: 6px;
+	  min-width: 6px;
+	  margin-right: 3px;
+	}
+
+	.right {
+	  transform: rotate(-45deg);
+	  -webkit-transform: rotate(-45deg);
+	}
+
+	.left {
+	  transform: rotate(135deg);
+	  -webkit-transform: rotate(135deg);
+	}
 }*/
-
-
